# PoW-Programs

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/pow-privacy/: Arcium.toml  Cargo.toml
programs/pow-privacy/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/pow-privacy/src/instructions/: admin.rs  claim_reward.rs  create_claim_buffer.rs  create_claim_request_buffer.rs  create_deposit_buffer.rs  create_withdraw_buffer.rs  deposit_fee.rs  deposit_private.rs  initialize.rs  initialize_vaults.rs  mod.rs  submit_block_private.rs  withdraw_private.rs
programs/pow-protocol/: Cargo.toml
programs/pow-protocol/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/pow-protocol/src/instructions/: claim_team_fees.rs  create_attestation.rs  distribute_fees.rs  initialize.rs  mod.rs  submit_proof.rs  update_config.rs
programs/pow-protocol/tests/: pow_tests.rs  test_difficulty_adjustment.rs
