[workspace]
members = [
    "programs/*",
    "encrypted-ixs"
]
resolver = "2"

[workspace.dependencies]
# Forcer des versions compatibles pour tout le workspace
solana-program = "2.2.0"
solana-sdk = "2.2.0"
solana-client = "2.2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
