[package]
name = "pow-privacy"
version = "0.1.0"
description = "Privacy layer for PoW mining using Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pow_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# From https://docs.arcium.com/developers/migration/migration-v0.3-to-v0.4
anchor-debug = []
custom-heap = []
custom-panic = []
# IDL build - include arcium-anchor/idl-build
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
pow-protocol = { path = "../pow-protocol", features = ["cpi"] }
solana-program = "2.0"

# Arcium SDK for confidential computing
arcium-anchor = "0.7.0"
arcium-macros = "0.7.0"
arcium-client = { version = "0.7.0", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
